# botnet

./: Botid-Pitch-Deck.pptx  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: botctl-release.yml  botnet-release.yml  ci.yml  vps-rolling-deploy.yml
crates/identity-cli/: Cargo.toml
crates/identity-cli/src/: lib.rs  main.rs
crates/identity-core/: Cargo.toml
crates/identity-core/src/: agent_id.rs  bot_id.rs  canonical.rs  lib.rs  types.rs  validation.rs
crates/identity-crypto/: Cargo.toml
crates/identity-crypto/src/: jws.rs  keys.rs  lib.rs
crates/identity-policy/: Cargo.toml
crates/identity-policy/src/: eval.rs
crates/identity-sdk/: Cargo.toml
crates/identity-sdk/src/: lib.rs
crates/identity-server/: Cargo.toml
crates/identity-server/src/: main.rs
crates/identity-server/src/site/: bot_profile.rs  components.rs  css.rs  docs.rs  homepage.rs  mod.rs  util.rs
crates/identity-storage/: Cargo.toml
crates/identity-storage/src/: lib.rs  memory.rs  postgres.rs  sqlite.rs  storage.rs
crates/identity-storage/tests/: postgres_live.rs
crates/identity-web/: Cargo.toml
crates/identity-web/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
deploy/caddy/: Caddyfile.identity-registry
deploy/env/: a.env  b.env
deploy/systemd/: identity-registry@.service
migrations/: 0001_init.sql
scripts/: remote_rolling_deploy.sh
