[package]
name = "identity-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
identity-core = { path = "../identity-core" }
identity-sdk = { path = "../identity-sdk" }
serde_json.workspace = true
tokio.workspace = true
