[package]
name = "identity-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "botnet"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
identity-core = { path = "../identity-core" }
identity-crypto = { path = "../identity-crypto" }
identity-sdk = { path = "../identity-sdk" }
multibase.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
