[package]
name = "identity-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true
utoipa.workspace = true

[dev-dependencies]
proptest.workspace = true
