[package]
name = "identity-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
identity-core = { path = "../identity-core" }
identity-crypto = { path = "../identity-crypto" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true

[dev-dependencies]
multibase.workspace = true
rand.workspace = true
