[package]
name = "identity-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "identity-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
hex.workspace = true
identity-core = { path = "../identity-core" }
identity-crypto = { path = "../identity-crypto" }
identity-policy = { path = "../identity-policy" }
multibase.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
http.workspace = true
rand.workspace = true
tower = { version = "0.5", features = ["util"] }
