[package]
name = "identity-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
hex.workspace = true
identity-core = { path = "../identity-core" }
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
web-sys.workspace = true

[dev-dependencies]
futures.workspace = true
